player sensors, tweak movement, fix infinite jump

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         }
     </style>
     <script src="./lib/phaser.js"></script>
+    <script src="./lib/phaser-matter-collision.js"></script>
     <script src="./src/prefabs/Player.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="./src/Main.js"></script>
