--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         body {
             background-color: aquamarine;
         }
+
+        canvas {
+            padding:0;
+            margin: auto;
+            display: block;
+            width: 1024px;
+        }
     </style>
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Player.js"></script>
