Fire now chases player at a reasonable rate

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
     <div style="font-family:stockyPixels; position: absolute; left:-1000px; visibility:hidden;">.</div>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/prefabs/Fire.js"></script>
     <script src="./src/prefabs/Tongue.js"></script>
     <script src="./src/prefabs/GrappleBranch.js"></script> 
     <script src="./src/prefabs/Player.js"></script>
