Game now scales to fit center of screen

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <style>
         body {
             background-color: aquamarine;
+            margin: 0;
+            padding: 0;
         }
 
         canvas {
-            padding:0;
-            margin: auto;
             display: block;
-            width: 1024px;
         }
 
         @font-face {
